Actualiza estilos y HTML con nuevos retoques

--- a/styles/style.css
+++ b/styles/style.css
@@ -323,9 +323,12 @@ footer {
     
     }
 
-
-
-
-
    
+}
+
+/* Media query para pantallas con una resolución menor a 400px */
+@media (max-width: 420px) {
+    body {
+        margin-top: 42%;
+    }
 }
