--- a/styles/style.css
+++ b/styles/style.css
@@ -7,15 +7,21 @@
     box-sizing: border-box;
 }
 
+html{
+    font-size: 16px;
+}
+
 /* Estilos generales */
 body {
-    margin-top: 35%;
+    margin-top: 20%;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
     color: #333;
     background-color: #f4f4f4;
-    
+
 }
+
+li a {}
 
 
 
@@ -30,35 +36,42 @@ Flexibilidad: Los elementos hijos pueden crecer, encogerse y ajustarse dinámica
 /* Estilo para el header */
 .header {
     width: 100%;
-    height: 20vh; /* Ajusta la altura del header según tu necesidad */
+    height: 20vh;
+    /* Ajusta la altura del header según tu necesidad */
     position: fixed;
     top: 0;
     left: 0;
-    background-color: #ffffff; /* Ajusta el color de fondo según tu diseño */
+    background-color: #ffffff;
+    /* Ajusta el color de fondo según tu diseño */
     display: flex;
     flex-direction: column;
-    z-index: 1000; /* Asegúrate de que el header esté por encima de otros elementos */
-    transition: transform 0.3s ease; /* Añade una transición suave al transform */
+    z-index: 1000;
+    /* Asegúrate de que el header esté por encima de otros elementos */
+    transition: transform 0.3s ease;
+    /* Añade una transición suave al transform */
 }
 
 
 .header.scrolled {
-    transform: translateY(-50%); /* Ajusta este valor según sea necesario */
+    transform: translateY(-50%);
+    /* Ajusta este valor según sea necesario */
 }
 
 /* Estilo para la imagen del logo con transición */
 .logo-container img {
-    transition: opacity 0.3s ease; /* Añade una transición suave a la opacidad */
+    transition: opacity 0.3s ease;
+    /* Añade una transición suave a la opacidad */
 }
 
 /* Cuando el header está desplazado, cambia la opacidad */
 .header.scrolled .logo-container img {
-    opacity: 0; /* Cambia la opacidad cuando el header esté desplazado */
+    opacity: 0;
+    /* Cambia la opacidad cuando el header esté desplazado */
 }
 
 /* Estilo para el contenedor del contenido del header */
 .header-content {
-   
+
     display: flex;
     flex-direction: column;
     height: 100%;
@@ -75,24 +88,26 @@ Flexibilidad: Los elementos hijos pueden crecer, encogerse y ajustarse dinámica
 
 /* Estilo para el logo */
 .logo {
-    max-height: 100%; /* Asegúrate de que el logo no exceda la altura del contenedor */
+    max-height: 100%;
+    /* Asegúrate de que el logo no exceda la altura del contenedor */
 }
 
 /* Estilo para la navegación */
 .nav {
-    
+
     background-color: #333;
     height: 50%;
     display: flex;
     justify-content: center;
     align-items: center;
-   
+
 }
 
 
 /* Opcional: Cambia el color del texto al pasar el ratón */
 .nav-list a:hover {
-    color: #007bff; /* Cambia el color al pasar el ratón, ajusta según tu diseño */
+    color: #007bff;
+    /* Cambia el color al pasar el ratón, ajusta según tu diseño */
 }
 
 
@@ -106,29 +121,36 @@ Flexibilidad: Los elementos hijos pueden crecer, encogerse y ajustarse dinámica
 
 /* Estilo para los elementos de la lista de navegación */
 .nav-list li {
-    margin: 0 15px; /* Ajusta el espacio entre los enlaces según tu necesidad */
+    margin: 0 15px;
+    /* Ajusta el espacio entre los enlaces según tu necesidad */
 }
 
 .nav-list li.active {
-    background-color: #FFD700; /* Amarillo dorado */
-    color: black; /* Color del texto negro para combinar */
+    background-color: #FFD700;
+    /* Amarillo dorado */
+    color: black;
+    /* Color del texto negro para combinar */
 }
 
 
 /* Estilo para los enlaces de navegación */
 .nav-list a {
+    margin-left: 10px;
     text-decoration: none;
-    color: #ffffff; /* Ajusta el color del texto según tu diseño */
-    font-size: 16px; /* Ajusta el tamaño del texto según tu necesidad */
-    transition: color 0.3s ease; /* Añade una transición suave al cambio de color */
+    color: #ffffff;
+    /* Ajusta el color del texto según tu diseño */
+    font-size: 20px;
+    /* Ajusta el tamaño del texto según tu necesidad */
+    transition: color 0.3s ease;
+    /* Añade una transición suave al cambio de color */
 }
-s
+
 
 /* Secciones */
 main {
 
     max-width: 1200px;
-    margin: 20px auto ;
+    margin: 20px auto;
     padding: 20px;
     background-color: #fff;
     border-radius: 5px;
@@ -144,7 +166,8 @@ section {
 
 h1 {
 
-    font-size: 7vw; /* Tamaño proporcional al ancho de la ventana */
+    font-size: 7vw;
+    /* Tamaño proporcional al ancho de la ventana */
     font-family: Arial, sans-serif;
     margin-bottom: 10px;
     color: #000000;
@@ -152,7 +175,7 @@ h1 {
 
 
 
- h2 {
+h2 {
     font-size: 5vw;
     margin-bottom: 10px;
     color: #333;
@@ -177,14 +200,17 @@ footer p {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: white;
 }
+
 .gallery {
     display: flex;
     transition: transform 0.3s ease-in-out;
 }
+
 .gallery img {
     width: 100%;
     height: auto;
 }
+
 .nav-button {
     position: absolute;
     top: 50%;
@@ -195,9 +221,11 @@ footer p {
     padding: 10px;
     cursor: pointer;
 }
+
 .prev {
     left: 10px;
 }
+
 .next {
     right: 10px;
 }
@@ -216,7 +244,8 @@ footer p {
 
 
 .gallery-preview img {
-    width: 100px; /* Tamaño de las imágenes en la vista previa */
+    width: 100px;
+    /* Tamaño de las imágenes en la vista previa */
     height: auto;
     margin: 5px;
 }
@@ -236,7 +265,8 @@ footer p {
 .whatsapp-button {
     display: flex;
     align-items: center;
-    background-color: #25D366; /* Color oficial de WhatsApp */
+    background-color: #25D366;
+    /* Color oficial de WhatsApp */
     color: white;
     text-decoration: none;
     padding: 10px 20px;
@@ -249,7 +279,8 @@ footer p {
 .correo-button {
     display: flex;
     align-items: center;
-    background-color: #2576d3; /* Color oficial de WhatsApp */
+    background-color: #2576d3;
+    /* Color oficial de WhatsApp */
     color: white;
     text-decoration: none;
     padding: 10px 20px;
@@ -262,11 +293,13 @@ footer p {
 
 
 .whatsapp-button:hover {
-    background-color: #1ebc58; /* Un poco más oscuro en hover */
+    background-color: #1ebc58;
+    /* Un poco más oscuro en hover */
 }
 
 .whatsapp-logo {
-    height: 24px; /* Ajusta el tamaño de la imagen del logo */
+    height: 24px;
+    /* Ajusta el tamaño de la imagen del logo */
     margin-right: 10px;
 }
 
@@ -286,15 +319,16 @@ footer {
 @media (min-width: 768px) {
     body {
 
-      
+
         background-color: rgb(255, 255, 255);
-       
+
     }
 
 
     h1 {
 
-        font-size: 5vw; /* Tamaño proporcional al ancho de la ventana */
+        font-size: 5vw;
+        /* Tamaño proporcional al ancho de la ventana */
         font-family: Arial, sans-serif;
         margin-bottom: 10px;
         color: #000000;
@@ -302,34 +336,65 @@ footer {
 
 
     .nav-list li {
-        margin: 10px ;
+        margin: 10px;
     }
-    
-    
-    
-     h2 {
+
+
+
+    h2 {
         font-size: 3vw;
         margin-bottom: 10px;
         color: #333;
     }
-    
+
     p {
         font-size: 2vw;
         margin-bottom: 20px;
     }
-    
+
     footer p {
         font-size: 1vw;
-    
+
     }
 
-   
+
 }
 
 /* Media query para pantallas con una resolución menor a 400px */
-@media (max-width: 420px) {
+@media (max-width: 534px) {
     body {
         margin-top: 42%;
+    }
+
+    /* Estilo para los enlaces de navegación */
+    .nav-list a {
+        margin-left: 7px;
+        text-decoration: none;
+        color: #ffffff;
+        /* Ajusta el color del texto según tu diseño */
+        font-size: 17px;
+        /* Ajusta el tamaño del texto según tu necesidad */
+        transition: color 0.3s ease;
+        /* Añade una transición suave al cambio de color */
+    }
+
+}
+
+@media (max-width: 446px) {
+    body {
+        margin-top: 50%;
+    }
+
+    /* Estilo para los enlaces de navegación */
+    .nav-list a {
+        margin-left: 5px;
+        text-decoration: none;
+        color: #ffffff;
+        /* Ajusta el color del texto según tu diseño */
+        font-size: 15px;
+        /* Ajusta el tamaño del texto según tu necesidad */
+        transition: color 0.3s ease;
+        /* Añade una transición suave al cambio de color */
     }
 }
 
@@ -339,4 +404,6 @@ footer {
         margin-left: 15%;
         margin-right: 15%;
     }
+
+
 }
