--- a/styles/style.css
+++ b/styles/style.css
@@ -274,6 +274,7 @@ footer p {
     font-size: 18px;
     transition: background-color 0.3s;
     max-width: 350px;
+    flex-direction: column-reverse;
 }
 
 .correo-button {
@@ -288,6 +289,7 @@ footer p {
     font-size: 18px;
     transition: background-color 0.3s;
     max-width: 350px;
+    flex-direction: column-reverse;
 }
 
 
