--- a/styles/style.css
+++ b/styles/style.css
@@ -13,11 +13,13 @@ html{
 
 /* Estilos generales */
 body {
+    font-family: 'Poppins', sans-serif;
     margin-top: 20%;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.6;
     color: #333;
-    background-color: #f4f4f4;
+    background-color: #f4f4f9; /* Color de fondo más suave */
+   /*  background-color: #f4f4f4; */
 
 }
 
